// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component SearchPage works fine. 1`] = `
<div
  className="wrapper"
>
  <div
    className="wrapper-header"
  >
    <div
      className="wrapper-header-background"
    >
      <div
        className="wrapper-header-content"
      >
        <h1
          className="wrapper-header-content-title"
        >
          Netflix Roulete
        </h1>
        <div
          className="wrapper-header-content-search"
        >
          <form
            className="search"
            onSubmit={[Function]}
          >
            <div
              className="search-top"
            >
              <h3
                className="search-top-title"
              >
                FIND YOUR MOVIE
              </h3>
              <input
                className="search-top-input"
                onChange={[Function]}
                value=""
              />
            </div>
            <div
              className="search-bottom clearfix"
            >
              <p
                className="search-label"
              >
                SEARCH BY
              </p>
              <input
                className="search-button active"
                onClick={[Function]}
                type="button"
                value="TITLE"
              />
              <input
                className="search-button"
                onClick={[Function]}
                type="button"
                value="DIRECTOR"
              />
              <input
                className="search-submit"
                type="submit"
                value="SEARCH"
              />
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
  <div
    className="wrapper-content"
  >
    <div
      className="info"
    />
    <h1>
      No films found
    </h1>
  </div>
  <div
    className="wrapper-footer"
  >
    <p
      className="wrapper-footer-content"
    >
      Netflix Roulete
    </p>
  </div>
</div>
`;

exports[`Component SearchPage works fine. 2`] = `
<div
  className="wrapper"
>
  <div
    className="wrapper-header"
  >
    <div
      className="wrapper-header-background"
    >
      <div
        className="wrapper-header-content"
      >
        <h1
          className="wrapper-header-content-title"
        >
          Netflix Roulete
        </h1>
        <div
          className="wrapper-header-content-search"
        >
          <form
            className="search"
            onSubmit={[Function]}
          >
            <div
              className="search-top"
            >
              <h3
                className="search-top-title"
              >
                FIND YOUR MOVIE
              </h3>
              <input
                className="search-top-input"
                onChange={[Function]}
                value=""
              />
            </div>
            <div
              className="search-bottom clearfix"
            >
              <p
                className="search-label"
              >
                SEARCH BY
              </p>
              <input
                className="search-button active"
                onClick={[Function]}
                type="button"
                value="TITLE"
              />
              <input
                className="search-button"
                onClick={[Function]}
                type="button"
                value="DIRECTOR"
              />
              <input
                className="search-submit"
                type="submit"
                value="SEARCH"
              />
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
  <div
    className="wrapper-content"
  >
    <div
      className="info"
    />
    <h1>
      Something's wrong
    </h1>
  </div>
  <div
    className="wrapper-footer"
  >
    <p
      className="wrapper-footer-content"
    >
      Netflix Roulete
    </p>
  </div>
</div>
`;
